After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751595 - Invalid object type 'EggSearchBar'
Invalid object type 'EggSearchBar'
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
3.16.x
Other OpenBSD
: Normal major
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-27 17:27 UTC by Antoine Jacoutot
Modified: 2015-06-29 07:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
reference EggSearchBar (1.21 KB, patch)
2015-06-29 06:57 UTC, Antoine Jacoutot
accepted-commit_now Details | Review

Description Antoine Jacoutot 2015-06-27 17:27:03 UTC
Hi.

Running gnome-builder 3.16.3 on OpenBSD crashes at startup with:
Gtk[-1696419776]: CRITICAL: Error building template class 'GbGreeterWindow' for an instance of type 'GbGreeterWindow': Invalid object type 'EggSearchBar' on line 72

That's actually a segfault. I can rebuild gnome-builder with debug sympbols provide a backtrace if needed, but first I wanted to make sure that wasn't something obvious.
Thanks.
Comment 1 Christian Hergert 2015-06-29 04:04:34 UTC
Just to double check, you aren't using --enable-lto right? (I know some Arch packages had that enabled and had similar'ish issues).
Comment 2 Christian Hergert 2015-06-29 04:05:49 UTC
The other way to fix this, generally speaking, is to put something like:

  g_type_ensure (EGG_TYPE_SEARCH_BAR);

in the gb_greeter_window_class_init().
Comment 3 Antoine Jacoutot 2015-06-29 06:57:50 UTC
Created attachment 306263 [details] [review]
reference EggSearchBar

Hi Christian.

Thanks for the hint.
I am not using "--enable-lto".
The attached patch fixes the issue for me; not sure that's something that can be pushed as is though...
Comment 4 Christian Hergert 2015-06-29 07:15:19 UTC
Review of attachment 306263 [details] [review]:

LGTM
Comment 5 Antoine Jacoutot 2015-06-29 07:34:25 UTC
Thank you very much for the prompt answer.
Pushed as 8cf4174ab8e002f7be60283f693a5764afc99173