Unbreak runtime on OpenBSD.

Error building template class 'GbGreeterWindow' for an instance of type 'GbGreeterWindow': Invalid object type 'EggSearchBar'

https://bugzilla.gnome.org/show_bug.cgi?id=751595